--- a/user-data/conf.yml
+++ b/user-data/conf.yml
@@ -18,20 +18,20 @@ sections:
 - name: Getting Started
   icon: fas fa-rocket
   items:
-  - title: Dashy Live
+  - title: email
     description: Development a project management links for Dashy
     icon: https://i.ibb.co/qWWpD0v/astro-dab-128.png
-    url: https://live.dashy.to/
+    url: https://mail.google.com/mail/u/0/#inbox
     target: newtab
-  - title: GitHub
+  - title: Calendar
     description: Source Code, Issues and Pull Requests
-    url: https://github.com/lissy93/dashy
+    url: https://calendar.google.com/calendar/u/0/r?pli=1
     icon: favicon
-  - title: Docs
+  - title: Classroom
     description: Configuring & Usage Documentation
     provider: Dashy.to
     icon: far fa-book
-    url: https://dashy.to/docs
+    url: https://classroom.google.com/?authuser=0
   - title: Showcase
     description: See how others are using Dashy
     url: https://github.com/Lissy93/dashy/blob/master/docs/showcase.md
