--- a/user-data/conf.yml
+++ b/user-data/conf.yml
@@ -1,7 +1,7 @@
 ---
 # Page meta info, like heading, footer text and nav links
 pageInfo:
-  title: Otto's Dashborad
+  title: Otto's Dashboard
   description: Welcome to your new dashboard!
   navLinks:
   - title: GitHub
@@ -39,8 +39,7 @@ sections:
     url: https://calendar.google.com/calendar/u/0/r?pli=1
     icon: mdi-calendar-month
   - title: Classroom
-    description: Configuring & Usage Documentation
-    provider: Dashy.to
+    description: Open Google Classroom
     icon: https://www.clipartkey.com/mpngs/m/45-457301_google-classroom-icon.png
     url: https://classroom.google.com/?authuser=0
 
